# elc

./: README.md  dataset_for_internship.csv  elc_200m_combined  elc_500m_combined  elc_forecast_200m  elc_forecast_500m  pyproject.toml  timesfm_elc.ipynb
